<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_task_id"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/task_is"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_elapse"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/elapsed_time"
            android:textColor="@color/elapse_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_task_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_task_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_task_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/patrol"
            android:textColor="@color/sign_screen_bg"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dispatcher"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/dispatcher"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_accident"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/accident"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dispatcher" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_call"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_local_phone"
            app:layout_constraintBottom_toBottomOf="@id/tv_accident"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_accident" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_map"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_pin_drop"
            app:layout_constraintBottom_toBottomOf="@id/tv_accident"
            app:layout_constraintEnd_toStartOf="@id/iv_call"
            app:layout_constraintTop_toTopOf="@id/tv_accident" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_accident" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/phone"
            android:textColor="@color/sign_screen_bg"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_accident_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sample_address"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/iv_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_keyboard_arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_accident_address" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_more_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/more_des"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_less"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_accident_address" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_less"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_keyboard_arrow_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_more_info" />


        <LinearLayout
            android:id="@+id/cl_card"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/shape_payment"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_more_info">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_task_new"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/task_new" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_task_inprogress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/in_progress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_task_completed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/completed" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>