<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sign_screen_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#FF2565A0"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/username"
            android:textColor="@color/lable"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_sign" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_sign_username"
            android:hint="@string/username"
            android:nextFocusDown="@id/et_password"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/lable"
            android:textColorHint="@color/lable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_username" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/password"
            android:textColor="@color/lable"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_sign_username"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/lable"
            android:textColorHint="@color/lable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_login_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/sign_screen_bg"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_forgot"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/lable"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>